--- a/Exercise-1.html
+++ b/Exercise-1.html
@@ -369,6 +369,7 @@ summary {
 </div>
 
 
+<p>CV Basic Info</p>
 <p>Name: J. Clinton Rooker</p>
 <p>Department Address: 1050 Bascom Mall, Madison, WI 53706</p>
 <p>Email: <a href="mailto:jcrooker@wisc.edu" class="email">jcrooker@wisc.edu</a></p>
